# my-dashboard

./: Makefile  README.md  pyproject.toml
desktop/: Makefile  index.html  main.js  package.json  renderer.js
docs/: requirements.mm.md
tui/: Makefile  pyproject.toml
tui/src/: main.py
tui/userdata/: config.json  warp-command.csv
