[tool.poetry]
name = "my-dashboard"
version = "0.1.0"
description = ""
authors = ["yuya-okada527 <yuya.okada527@gmail.com>"]
readme = "README.md"
packages = [{include = "my_dashboard"}]

[tool.poetry.dependencies]
python = "3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
